Bug #7018
illumos-gate build fails with libxml2 2.9.4
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2016-05-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
illumos-gate build fails with libxml2 2.9.4
==== Build errors (non-DEBUG) ==== xml/data.c:366: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] xml/data.c:649: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:119: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:162: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:189: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:217: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:287: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:348: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:381: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:392: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:407: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:418: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:491: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:681: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] door.c:1102: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] xml/data.c:366: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] xml/data.c:649: error: pointer targets in passing argument 3 of 'xmlStrPrintf' differ in signedness [-Wpointer-sign] dmake: Warning: Target `install' not remade because of errors The following command caused the error: dmake: Warning: Target `install' not remade because of errors dmake: Warning: Command failed for target `isns' dmake: Warning: Target `install' not remade because of errors The following command caused the error: dmake: Warning: Target `install' not remade because of errors
Updated by Richard PALO over 4 years ago
judging by the difference, this is an oversight being corrected in libxml2.
--- /usr/include/libxml2/libxml/xmlstring.h +++ /opt/local/include/libxml2/libxml/xmlstring.h @@ -97,13 +97,13 @@ XMLPUBFUN int XMLCALL xmlStrPrintf (xmlChar *buf, int len, - const xmlChar *msg, - ...); + const char *msg, + ...) LIBXML_ATTR_FORMAT(3,4); XMLPUBFUN int XMLCALL xmlStrVPrintf (xmlChar *buf, int len, - const xmlChar *msg, - va_list ap); + const char *msg, + va_list ap) LIBXML_ATTR_FORMAT(3,0); XMLPUBFUN int XMLCALL xmlGetUTF8Char (const unsigned char *utf,
from the libxml2 commit msg:
For https://bugzilla.gnome.org/show_bug.cgi?id=761029 Decorate every method in libxml2 with the appropriate LIBXML_ATTR_FORMAT(fmt,args) macro and add some cleanups following the reports.
apparently because this is more or less a passthrough to vsnprintf...
since this is an external dependency, probably best to put in a macro with
a guard using simply char* when LIBXML_VERSION >= 20904
then both old and new will work.
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 0687de4f0b1d84cc87ddf92c49ceaec0f551670e
commit 0687de4f0b1d84cc87ddf92c49ceaec0f551670e Author: Alexander Pyhalov <apyhalov@gmail.com> Date: 2016-06-01T19:17:41.000Z 7018 illumos-gate build fails with libxml2 2.9.4 Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>