7018 illumos-gate build fails with libxml2 2.9.4 Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>